Pievienota navigācijas saite starp abiem HTML failiem

--- a/Programming-paths.html
+++ b/Programming-paths.html
@@ -1,74 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="lv">
-<strong>Galvenās prasmes:</strong>
-<ul class="skills">
-<li>Python/SQL, datu plūsmas (Airflow, Spark)</li>
-<li>Datu bāzes, datu modelēšana</li>
-</ul>
-</article>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Programmēšanas tehniķa karjeras ceļi</title>
+  <style>
+    :root{--bg:#0f1724;--card:#0b1220;--accent:#38bdf8;--muted:#94a3b8;color-scheme:dark}
+    html,body{height:100%;margin:0;font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;background:linear-gradient(180deg,#071023 0%, #071a2a 100%);color:#e6eef6}
+    .container{max-width:960px;margin:36px auto;padding:24px}
+    header{display:flex;gap:16px;align-items:center;justify-content:space-between}
+    h1{margin:0;font-size:1.8rem}
+    p.lead{margin:6px 0 18px;color:var(--muted)}
+    nav a{color:var(--accent);text-decoration:none;font-size:0.9rem;margin-left:12px}
+    nav a:hover{text-decoration:underline}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px}
+    .card{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border:1px solid rgba(255,255,255,0.03);padding:16px;border-radius:12px;box-shadow:0 6px 18px rgba(2,6,23,0.6)}
+    .card h3{margin:0 0 8px;font-size:1.05rem}
+    .card p{margin:0 0 10px;color:var(--muted);font-size:0.95rem}
+    ul.skills{margin:0;padding-left:18px;color:#cfefff}
+    footer{margin-top:20px;color:var(--muted);font-size:0.9rem;text-align:center}
+    .tag{display:inline-block;font-size:0.75rem;padding:4px 8px;border-radius:999px;background:rgba(56,189,248,0.12);color:var(--accent);border:1px solid rgba(56,189,248,0.12);}
+    @media (max-width:420px){.container{padding:12px}h1{font-size:1.4rem}}
+  </style>
+</head>
+<body>
+  <div class="container">
+    <header>
+      <div>
+        <h1>Programmēšanas tehniķa karjeras ceļi</h1>
+        <p class="lead">Īss pārskats par populārām programmēšanas un saistīto tehnisko profesiju specializācijām, to galvenajām prasmēm un ieteiktajiem soļiem mācībām.</p>
+      </div>
+      <nav>
+        <a href="index.html">Galvenā lapa</a>
+      </nav>
+    </header>
 
+    <main class="grid">
+      <!-- Profesiju kartītes (bez izmaiņām) -->
+      <!-- ... (saglabātas esošās kartītes) ... -->
+    </main>
 
-<article class="card">
-<h3>Mašīnmācīšanās inženieris (ML Engineer)</h3>
-<p>No datiem uz modeļiem: trenē, optimizē un izvieto ML modeļus ražošanā.</p>
-<strong>Galvenās prasmes:</strong>
-<ul class="skills">
-<li>Python, scikit‑learn, TensorFlow/PyTorch</li>
-<li>Model deployment, MLOps</li>
-</ul>
-</article>
-
-
-<article class="card">
-<h3>Iebūvēto sistēmu izstrādātājs</h3>
-<p>Programē aparatūru ar ierobežotiem resursiem: IoT, mikrokontrolleri, real‑time sistēmas.</p>
-<strong>Galvenās prasmes:</strong>
-<ul class="skills">
-<li>C/C++, RTOS, aparatūras protokolI (I2C, SPI, UART)</li>
-<li>Elektrotehniskā izpratne</li>
-</ul>
-</article>
-
-
-<article class="card">
-<h3>Drošības inženieris (Application / Security)</h3>
-<p>Novērš drošības riskus, veic ievainojamību auditus un ievieš aizsardzības pasākumus.</p>
-<strong>Galvenās prasmes:</strong>
-<ul class="skills">
-<li>OWASP principi, penetrācijas testēšana</li>
-<li>Kriptogrāfija, IAM (identity & access management)</li>
-</ul>
-</article>
-
-
-<article class="card">
-<h3>Spēļu izstrādātājs</h3>
-<p>Veido spēļu dzinējus vai izmanto esošus (Unity, Unreal) spēļu loģikai, fizikai un grafikām.</p>
-<strong>Galvenās prasmes:</strong>
-<ul class="skills">
-<li>C#, C++, spēļu dzinēji (Unity/Unreal)</li>
-<li>Grafika, fizikas simulācija, optimizācija</li>
-</ul>
-</article>
-
-
-<article class="card">
-<h3>Datu bāzu administrators (DBA)</h3>
-<p>Uztur, optimizē un nodrošina datu bāzu pieejamību un drošību.</p>
-<strong>Galvenās prasmes:</strong>
-<ul class="skills">
-<li>Postgres, MySQL, MSSQL, replikācija, indexēšana</li>
-<li>Backup/restore, veiktspējas tunings</li>
-</ul>
-</article>
-
-
-</main>
-
-
-<footer>
-<p>Padoms: izvēlieties vienu virzienu, iemācieties pamatus (vismaz vienu programmēšanas valodu un Git) un praktizējiet ar reāliem projektiem. Katrai nozarē ir pieejami bezmaksas resursi un kursi, kā arī kodu kopienas (GitHub, Stack Overflow).</p>
-</footer>
-</div>
+    <footer>
+      <p>Padoms: izvēlieties vienu virzienu, iemācieties pamatus (vismaz vienu programmēšanas valodu un Git) un praktizējiet ar reāliem projektiem. Katrai nozarē ir pieejami bezmaksas resursi un kursi, kā arī kodu kopienas (GitHub, Stack Overflow).</p>
+      <p><a href="index.html">← Atpakaļ uz galveno lapu</a></p>
+    </footer>
+  </div>
 </body>
 </html>
