Pievienots īsais pārskats par profesijām un navigācijas saite

--- a/Programming-paths.html
+++ b/Programming-paths.html
@@ -20,6 +20,8 @@
     ul.skills{margin:0;padding-left:18px;color:#cfefff}
     footer{margin-top:20px;color:var(--muted);font-size:0.9rem;text-align:center}
     .tag{display:inline-block;font-size:0.75rem;padding:4px 8px;border-radius:999px;background:rgba(56,189,248,0.12);color:var(--accent);border:1px solid rgba(56,189,248,0.12);}
+    .summary{margin-bottom:24px}
+    .summary ul{padding-left:18px;color:#cfefff}
     @media (max-width:420px){.container{padding:12px}h1{font-size:1.4rem}}
   </style>
 </head>
@@ -34,6 +36,25 @@
         <a href="index.html">Galvenā lapa</a>
       </nav>
     </header>
+
+    <!-- Īsais pārskats par profesijām -->
+    <section class="summary">
+      <h2>Pārskats par profesijām</h2>
+      <ul>
+        <li>Frontend izstrādātājs – veido lietotāja interfeisus</li>
+        <li>Backend izstrādātājs – izstrādā servera pusi un API</li>
+        <li>Full-stack izstrādātājs – savieno frontend un backend prasmes</li>
+        <li>Mobilais izstrādātājs – iOS/Android aplikācijas</li>
+        <li>QA/Automatizācijas inženieris – testē un nodrošina kvalitāti</li>
+        <li>DevOps inženieris – automatizē infrastruktūru un izvietošanu</li>
+        <li>Datu inženieris – pārvalda datu plūsmas un noliktavas</li>
+        <li>ML inženieris – trenē un izvieto ML modeļus</li>
+        <li>Iebūvēto sistēmu izstrādātājs – programmē aparatūru</li>
+        <li>Drošības inženieris – aizsargā aplikācijas un sistēmas</li>
+        <li>Spēļu izstrādātājs – veido spēļu dzinējus un loģiku</li>
+        <li>DBA – uztur un optimizē datu bāzes</li>
+      </ul>
+    </section>
 
     <main class="grid">
       <!-- Profesiju kartītes (bez izmaiņām) -->
