Pievienota saite no Olivers.html uz Programming-paths.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Olivers</title>
 </head>
 <body>
     <h1>Olivers</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEc9A_S6BPxCDRp5WjMFEfXrpCu1ya2OO-Lw&s" alt="wikipeadia.com">
+
+    <p><a href="Programming-paths.html">→ Uz Programmēšanas tehniķa karjeras ceļi</a></p>
 </body>
 </html>
